Fixed alignment stuff for sign in page

--- a/src/app/landing/signin/signin.component.css
+++ b/src/app/landing/signin/signin.component.css
@@ -1,10 +1,22 @@
-#signUp{
+a{
+    color:#FF4500;
+}
+
+a:hover{
+    color:black;
+}
+
+#signUpSpan{
     margin-top: 15px;
     display: flex; /* or inline-flex */
     align-items: center;
     justify-content: center;
 }
 
+#inputClass{
+    border: 1px solid #888;
+    border-radius: 25px;;
+}
 
 /* Full-width input fields */
 input[type=text], input[type=password] {
@@ -33,13 +45,6 @@ input[type=text], input[type=password] {
     opacity: 0.8;
   }
   
-  /* Extra styles for the cancel button */
- /* .cancelbtn {
-    width: auto;
-    padding: 10px 18px;
-    background-color: #f44336;
-  }*/
-  
   /* Center the image and position the close button */
   .imgcontainer {
     text-align: center;
@@ -64,32 +69,27 @@ input[type=text], input[type=password] {
   
   /* The Modal (background) */
   .modal {
-    display: flex; /* or inline-flex */
-    align-items: center;
-    justify-content: center;
-    position: fixed; /* Stay in place */
+    margin:0 auto;
     z-index: 1; /* Sit on top */
     left: 0;
     top: 0;
     width: 60%; /* Full width */
     height: 60%; /* Full height */
     /*overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-    padding-top: 100px;
+    background-color: #FF4500; /* Fallback color */
+    background-color: #FF4500; /* Black w/ opacity */
+    border-radius: 25px;
+    padding-top: 35px;
+    padding-bottom: 35px;
   }
   
   /* Modal Content/Box */
   .modal-content {
     background-color: #fefefe;
-    margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
+    margin: 0% auto 0% auto; /* 5% from the top, 15% from the bottom and centered */
     border: 1px solid #888;
+    border-radius: 25px;
     width: 80%; /* Could be more or less, depending on screen size */
-  }
-
-  #inputClass{
-    border: 1px solid #888;
-    border-radius: 25px;;
   }
   
   /* The Close Button (x) */
